# jivanu-rag

./: .gitignore  DEPLOYMENT.md  Dockerfile  deploy-aws.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements.txt.backup  streamlit_app.py
src/config/: __init__.py  config.py
src/conversation/: __init__.py  conversation_manager.py
src/document_ingestion/: __init__.py  document_processor.py
src/graph_builder/: __init__.py  graph_builder.py
src/node/: __init__.py  rag_nodes.py
src/state/: __init__.py  rag_state.py
src/vectorstore/: __init__.py  vectorstore.py
